# filetransfer

./: .gitignore  README.md
common/: CMakeLists.txt  Config.h  Singleton.h  Tool.cpp  Tool.h
core/include/: AppServer.h  Cache.h  Global.h  HandlerProxy.h  Log.h  NewReactor.h  PacketDecoder.h  Poller.h  ServerBase.h  Singleton.h  StaticLink.h  TcpHandlerBase.h  TcpSocketHandler.h
core/src/: CMakeLists.txt  Cache.cpp  HandlerProxy.cpp  NewReactor.cpp  PacketDecoder.cpp  Poller.cpp  ServerBase.cpp  TcpSocketHandler.cpp
srv/fileTransferClient/: CMakeLists.txt  main.cpp
srv/fileTransferClient/include/: ClientHandlerProxy.h  CommonModel.h  HandlerClient.h  HandlerClientTransmission.h  Processor.h  ProcessorManager.h
srv/fileTransferClient/src/: ClientHandlerProxy.cpp  CommonModel.cpp  HandlerClient.cpp  HandlerClientTransmission.cpp  Processor.cpp  ProcessorManager.cpp
srv/fileTransferServer/: main.cpp
srv/fileTransferServer/src/: HandlerTransmission.cpp  Processor.cpp  ProcessorManager.cpp  ServerTransfer.cpp
srv/lcmServer/: CMakeLists.txt  main.cpp
srv/lcmServer/include/: CommonModel.h  HandlerTransmission.h  LCMTcpqHandler.h  LCMTcpqPacket.h  Processor.h  ProcessorBase.h  ProcessorManager.h  ServerHandlerProxy.h  ServerTransfer.h
srv/lcmServer/src/: CMakeLists.txt  CommonModel.cpp  LCMTcpHandler.cpp  LCMTcpqPacket.cpp  ServerHandlerProxy.cpp
third/: CMakeLists.txt
third/proto/: PbMessage.proto  makefile
